[gd_scene load_steps=10 format=2]

[ext_resource path="res://Notepad/icon.png" type="Texture" id=1]
[ext_resource path="res://Notepad/Notepad.gd" type="Script" id=2]
[ext_resource path="res://Terminal/developer.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://data/computer.theme" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 8
extra_spacing_top = 1
font_data = ExtResource( 3 )

[node name="Notepad" type="Panel"]
margin_left = 312.0
margin_top = 25.0
margin_right = 614.0
margin_bottom = 296.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 302.0
margin_bottom = 271.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 302.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 15 )
custom_constants/separation = 0

[node name="HeaderBar" type="Panel" parent="VBoxContainer/HeaderContainer"]
margin_right = 302.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="icon" type="TextureRect" parent="VBoxContainer/HeaderContainer/HeaderBar"]
margin_right = 15.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HeaderContainer/HeaderBar"]
margin_left = 15.0
margin_top = 5.0
margin_right = 135.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "iMpOrTaNt NoTeS!.txt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer/HeaderContainer/HeaderBar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -18.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.294118, 0, 0, 1 )
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 302.0
margin_bottom = 271.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 302.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_constants/separation = 0

[node name="Text" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 302.0
margin_bottom = 251.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true

[node name="Timer" type="Timer" parent="."]
[connection signal="gui_input" from="VBoxContainer" to="." method="_on_VBoxContainer_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HeaderContainer/HeaderBar" to="." method="_on_drag"]
[connection signal="pressed" from="VBoxContainer/HeaderContainer/HeaderBar/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="gui_input" from="VBoxContainer/ScrollContainer" to="." method="_on_ScrollContainer_gui_input"]
[connection signal="sort_children" from="VBoxContainer/ScrollContainer" to="." method="_on_ScrollContainer_sort_children"]
[connection signal="gui_input" from="VBoxContainer/ScrollContainer/VBoxContainer/Text" to="." method="_on_TextEdit_gui_input"]
